[package]
name = "hexagon-vm-core"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "The Hexagon VM"
license = "LGPL-3.0"
repository = "https://github.com/losfair/hexagon-vm-core"

[dependencies]
smallvec = "0.6"
byteorder = "1"
serde = "1"
serde_derive = "1"
bincode = "0.9"
